# fallmento

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  fallment_co.h  fallment_co_optimize.h  fallment_co_origin.h  fallmento.h  fallmento_optimize.h  fallmento_origin.h  readme.md
test/: testMultyield.cc  testOptimize.cc  testOptimize2.cc  testOrigin.cc  testPrimefactor.cc
